@@ -758,6 +758,7 @@ mercury_std_library_module_name(qualified(unqualified("mercury"), Name)) :-
 	mercury_std_library_module(Name).
 
 mercury_std_library_module("array").
+mercury_std_library_module("array2d").
 mercury_std_library_module("assoc_list").
 mercury_std_library_module("bag").
 mercury_std_library_module("benchmarking").
