@@ -141,6 +141,7 @@ ORDINARY_PROGS=	\
 	term_to_univ_test \
 	test_bitset \
 	test_imported_no_tag \
+	test_array2d \
 	tim_qual1 \
 	time_test \
 	tuple_test \
