@@ -46,6 +46,8 @@ Changes to the Mercury language:
 
 Changes to the Mercury standard library:
 
+* We've added a new library module, `array2d'.
+
 * We've added the three predicates, `is_nan/1', `is_inf/1' and
   `is_nan_or_inf/1' to float.m.  These predicates are for use only on
   systems which support IEEE floating point arithmetic.
